--- a/src/containers/login/login.less
+++ b/src/containers/login/login.less
@@ -13,6 +13,7 @@ html,body,#root{
     height: 80px;
     background-color: rgba(21,20,13,0.5);
     img{
+      border-radius: 10px;
       width: 40px;
       height: 40px;
       margin-left: 50px;
